--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -2,17 +2,13 @@ name: Black
 on: [push]
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8"]
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      - uses: actions/checkout@v2
+      - uses: psf/black@stable
+      - uses: psf/black@stable
       with:
-        python-version: ${{ matrix.python-version }}
-    - run: python -m pip install --upgrade pip
-    - run: pip install black==21.6b0
-    - run: black --diff --check $(git ls-files '*.py')
+        options: "--check --verbose"
+        src: "./src"
+        version: "21.5b1"
