--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -10,4 +10,4 @@ jobs:
       with:
         options: "--check --verbose"
         src: "./src"
-        version: "21.5b1"
+        version: "22.3.0"
