--- a/dockerfiles/Dockerfile.DGII
+++ b/dockerfiles/Dockerfile.DGII
@@ -1,9 +1,13 @@
-FROM tensorflow/tensorflow:1.12.0-gpu-py3
+RUN echo "In Dockerfile"
+
+FROM tensorflow/tensorflow:1.13.0-gpu-py3
 
 LABEL maintainer="Calden Wloka <cwloka@hmc.edu>"
 
 ################################################################################
 ### Apt and pip dependencies
+
+RUN echo "In Apt and pip dependencies"
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
             python3-tk python-opencv && \
@@ -17,6 +21,8 @@ RUN pip3 install /tmp/smiler_tools
 ################################################################################
 ### Volumes and directories
 
+RUN echo "In volumes and directories"
+
 VOLUME ["/opt/model"]
 VOLUME ["/opt/input_vol"]
 VOLUME ["/opt/output_vol"]
@@ -24,3 +30,5 @@ VOLUME ["/opt/output_vol"]
 WORKDIR /opt/model
 
 CMD ["/bin/bash"]
+
+RUN echo "End of Dockerfile"
